--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <br>
         <br>
     <video width="320" height="240"  controls>
-        <source src="file/4124017-uhd_2160_4096_25fps.mp4" type="video/mp4" >
+        <source src="4124017-uhd_2160_4096_25fps.mp4" type="video/mp4" >
     </video>
     <audio  controls>
-        <source src="file/file_example_MP3_700KB.mp3" type="audio/mpeg">
+        <source src="file_example_MP3_700KB.mp3" type="audio/mpeg">
     </audio>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/FQdaUv95mR8?si=29lA1a53oX6Blttz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
